force-app/main/default/objects/Email_Template_Types_Mapping__mdt/Email_Template_Types_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>IM Customer Center - Email Template Types Mapping</description>
    <label>Email Template Types Mapping</label>
    <pluralLabel>Email Template Types Mappings</pluralLabel>
</CustomObject>