force-app/main/default/objects/Email_Template_Types_Mapping__mdt/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor</label>
    <type>Checkbox</type>
</CustomField>