force-app/main/default/objects/Email_Template_Types_Mapping__mdt/fields/Customer_Only__c.field-meta.xml
<CustomField>
    <fullName>Customer_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Only</label>
    <type>Checkbox</type>
</CustomField>