force-app/main/default/objects/Email_Template_Types_Mapping__mdt/fields/Email_Template_Code__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Code__c</fullName>
    <label>Email Template Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>