force-app/main/default/objects/Email_Template_Types_Mapping__mdt/fields/External__c.field-meta.xml
<CustomField>
    <fullName>External__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External</label>
    <type>Checkbox</type>
</CustomField>