force-app/main/default/objects/Email_Template_Types_Mapping__mdt/fields/Operations_Team__c.field-meta.xml
<CustomField>
    <fullName>Operations_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operations Team</label>
    <type>Checkbox</type>
</CustomField>