force-app/main/default/objects/Email_Template_Types_Mapping__mdt/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Email_Template_Code__c</columns>
    <columns>Group_Name__c</columns>
    <columns>Customer_Only__c</columns>
    <columns>External__c</columns>
    <columns>Operations_Team__c</columns>
    <columns>Contractor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Data</label>
    <language>en_US</language>
</ListView>