force-app/main/default/objects/Email_Template_Types_Mapping__mdt/listViews/Stand_Contractor.listView-meta.xml
<ListView>
    <fullName>Stand_Contractor</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Email_Template_Code__c</columns>
    <columns>Customer_Only__c</columns>
    <columns>Contractor__c</columns>
    <columns>Operations_Team__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group_Name__c</field>
        <operation>equals</operation>
        <value>Stand Contractor</value>
    </filters>
    <label>Stand Contractor</label>
    <language>en_US</language>
</ListView>